--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,9 @@ name = "delta-debugging"
 version = "0.4.0"
 dependencies = [
     "kaitaistruct>=0.11",
+    "matplotlib>=3.10.7",
+    "numpy>=2.3.4",
+    "pandas>=2.3.3",
     "tabulate>=0.9.0",
     "tqdm>=4.67.1",
     "tree-sitter>=0.25.1",
